@@ -1,2 +1,3 @@
-1.jar檔案放置在target->musicspeed-1.0-SNAPSHOT.jar，點擊就可以執行
+1.jar檔案放置在musicCreator\musicspeed-1.0-SNAPSHOT.jar，打開終端輸入下面的指令:
+java --module-path "你的javafxSDKj位置" --add-modules javafx.controls,javafx.fxml -jar "第23組_音樂編輯軟體_Java2024.jar的位置"，移動jar的位置會無法載入wav檔。
 2.改善了一堆bug讓程式更穩定，可以輸出檔案，利用滑條更改的部分也可以用文字輸入，新增一些音效
